--- a/al-tamimi-college-system/backend/package.json
+++ b/al-tamimi-college-system/backend/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "pdfkit": "^0.15.0",
     "pg": "^8.12.0",
+    "socket.io": "^4.8.3",
     "zod": "^3.23.8"
   }
 }
