--- a/al-tamimi-college-system/frontend/package.json
+++ b/al-tamimi-college-system/frontend/package.json
@@ -13,7 +13,15 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
-    "lucide-react": "^0.451.0"
+    "lucide-react": "^0.451.0",
+    "framer-motion": "^11.0.0",
+    "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.8.0",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.8",
+    "date-fns": "^3.6.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
